0.03
 - Fix escape sequences in Select.

0.02 2024-05-12T20:52:17+02:00
 - Add missing version to Count and Select.
 - Add tests for Count.
 - Simplify code of Select.
 - Update copyright years.

0.01 2023-05-26T10:08:28+02:00
 - First version.