@@ -3,7 +3,7 @@ use warnings;
 
 use English;
 use Error::Pure::Utils qw(clean);
-use Test::More 'tests' => 3;
+use Test::More 'tests' => 4;
 use Test::NoWarnings;
 use WQS::SPARQL::Query::Count;
 
@@ -18,6 +18,18 @@ SELECT (COUNT(?item) as ?count) WHERE {
 }
 END
 is($sparql, $right_ret, 'Simple SPARQL count value query.');
+
+# Test.
+$obj = WQS::SPARQL::Query::Count->new;
+$property = 'P1448';
+my $name = 'foo\'bar\'baz';
+$sparql = $obj->count_value($property, $name);
+$right_ret = <<"END";
+SELECT (COUNT(?item) as ?count) WHERE {
+  ?item wdt:$property 'foo\\\'bar\\\'baz'
+}
+END
+is($sparql, $right_ret, 'Simple SPARQL count value query with escape sequences.');
 
 # Test.
 $obj = WQS::SPARQL::Query::Count->new;
