@@ -1,4 +1,5 @@
 0.03
+ - Fix escape sequences in Count.
  - Fix escape sequences in Select.
 
 0.02 2024-05-12T20:52:17+02:00
